testdata/baselines/reference/submodule/compiler/moduleSharesNameWithImportDeclarationInsideIt2.errors.txt
moduleSharesNameWithImportDeclarationInsideIt2.ts(7,25): error TS2694: Namespace 'Z' has no exported member 'M'.


==== moduleSharesNameWithImportDeclarationInsideIt2.ts (1 errors) ====
    module Z.M {
        export function bar() {
            return "";
        }
    }
    module A.M {
        export import M = Z.M;
                            ~
!!! error TS2694: Namespace 'Z' has no exported member 'M'.
        export function bar() {
        }
        M.bar(); // Should call Z.M.bar
    }